[package]
name = "orgstats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.32", features = ["macros", "rt-multi-thread"] }
scraper = "^0.17.1"
reqwest  = { version = "^0.11.20", features = [ "blocking", "json", "gzip" ] }
http = "^0.2.8"
csv = "^1.2.1"
chrono = { version = "^0.4.31", features = [ "serde" ] }
diesel = { version= "^2.1.2", features = [ "chrono", "postgres"] }
serde = { version = "^1.0.188", features = [ "derive" ]}
serde_json = "^1.0.106"
notify-rust = "^4.9"